# ChangeLog for sys-auth/pam_ldap
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_ldap/ChangeLog,v 1.29 2006/10/12 16:30:36 flameeyes Exp $

  12 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> pam_ldap-180.ebuild,
  pam_ldap-182.ebuild:
  Fix autotools regeneration and dependencies. Thanks to Patric Lauer for
  reporting in bug #151034.

  12 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/pam_ldap-176-fix-referral-tls.patch, -pam_ldap-156.ebuild,
  -pam_ldap-161.ebuild, -pam_ldap-164.ebuild, -pam_ldap-167.ebuild,
  -pam_ldap-171.ebuild, -pam_ldap-176.ebuild, -pam_ldap-176-r1.ebuild,
  -pam_ldap-178.ebuild, -pam_ldap-178-r1.ebuild:
  Remove old versions.

  07 Jun 2006; Robin H. Johnson <robbat2@gentoo.org> pam_ldap-182.ebuild:
  Bug #135903, fix IUSE.

*pam_ldap-182 (29 May 2006)

  29 May 2006; Robin H. Johnson <robbat2@gentoo.org> +pam_ldap-182.ebuild:
  Version bump.

  29 Apr 2006; Michael Hanselmann <hansmi@gentoo.org> pam_ldap-180.ebuild:
  Stable on mips.

  18 Mar 2006; Robin H. Johnson <robbat2@gentoo.org> pam_ldap-180.ebuild:
  Bug #105748, include manpage.

  17 Mar 2006; Robin H. Johnson <robbat2@gentoo.org>
  files/digest-pam_ldap-180, Manifest:
  Upstream re-released the file with different timestamps.

  02 Jan 2006; Diego Pettenò <flameeyes@gentoo.org> pam_ldap-180.ebuild:
  Add missing inherit.

  30 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> pam_ldap-180.ebuild:
  Use dopammod instead of exeinto/doexe.

  09 Oct 2005; Diego Pettenò <flameeyes@gentoo.org> metadata.xml:
  Add pam-bugs email address as maintainer.

  03 Oct 2005; Michael Hanselmann <hansmi@gentoo.org> pam_ldap-180.ebuild:
  Added to ~mips.

  17 Sep 2005; Aron Griffis <agriffis@gentoo.org> pam_ldap-180.ebuild:
  Mark 180 stable on alpha

  03 Sep 2005; Diego Pettenò <flameeyes@gentoo.org> pam_ldap-180.ebuild:
  Don't install COPYING file (on latest version).
