@@ -1,6 +1,11 @@
 # ChangeLog for sys-auth/pam_ldap
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_ldap/ChangeLog,v 1.29 2006/10/12 16:30:36 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_ldap/ChangeLog,v 1.30 2006/12/11 20:20:16 robbat2 Exp $
+
+*pam_ldap-183 (11 Dec 2006)
+
+  11 Dec 2006; Robin H. Johnson <robbat2@gentoo.org> +pam_ldap-183.ebuild:
+  Bug #153916, version bump.
 
   12 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> pam_ldap-180.ebuild,
   pam_ldap-182.ebuild:
